--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 {% block announce %}
-  在
-  <a rel="me" href=" https://b23.tv/odMTbG7">
-    <span class="twemoji bilibili">
+  <a rel="me" href=" https://b23.tv/odMTbG7">在<span class="twemoji bilibili">
       {% include ".icons/fontawesome/brands/bilibili.svg" %}
-    </span>
-    <strong>Bilibili</strong>
-  </a>
-  上关注<strong>@Minecraft基岩版开发维基</strong>获取最新知识！
+    </span><strong>Bilibili</strong>上关注<strong>@Minecraft基岩版开发维基</strong></a>获取最新知识！
 {% endblock %}
